[package]
name = "iam-token"
version = "0.1.0"
edition = "2021"
description = "IAM Protocol utility token — SPL Token-2022 with Confidential Balances"

[lib]
crate-type = ["cdylib", "lib"]
name = "iam_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022", "token_2022_extensions"] }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
blake3 = "=1.8.2"
